Applied feedback to literature study (1)

--- a/Thesis/LaTeX/bibliografie.bib
+++ b/Thesis/LaTeX/bibliografie.bib
@@ -481,3 +481,74 @@
 	url = {https://www.wipro.com/communications-/a-value-based-approach-to-improve-customer-experience-/},
 	year = {2012},
 }
+@inproceedings{Skjuve2019,
+	abstract = {Companies are increasingly using chatbots to provide customer service. Despite this trend, little in-depth research has been conducted on user experience and user motivation for this important application area of conversational interfaces. To close this research gap, we interviewed 24 users of two chatbots for customer service. Our results demonstrate the importance of such chatbots to efficiently provide adequate answers in response to simple enquiries. However, our results also show that the occasional lack of adequate answers does not necessarily produce a bad experience, as long as the chatbot offers an easy path for follow-up with human customer service representatives. In contrast to what is suggested in the existing literature on users' perceptions of conversational agents, this study's participants demonstrated realistic expectations of the chatbots' capabilities. Furthermore, we found that the human likeness of chatbots for customer service, while potentially of some relevance for user experience, is dwarfed in importance compared to such chatbots' ability to efficiently and adequately handle enquiries. As such, our findings serve to complement and extend current knowledge. On the basis of our findings, we suggest implications for theory and practice and point out avenues for future research.},
+	author = {Asbjørn Følstad and Marita Skjuve},
+	doi = {10.1145/3342775.3342784},
+	isbn = {9781450371872},
+	journal = {ACM International Conference Proceeding Series},
+	keywords = {Chatbot,Customer service,Interview study,User experience,User motivation},
+	month = {8},
+	publisher = {Association for Computing Machinery},
+	title = {Chatbots for customer service: User experience and motivation},
+	year = {2019},
+}
+@article{Sheehan2020,
+	abstract = {Firms are deploying chatbots to automate customer service. However, miscommunication is a frequent occurrence in human-chatbot interaction. This study investigates the relationship between miscommunication and adoption for customer service chatbots. Anthropomorphism is tested as an account for the relationship. Two experiments compare the perceived humanness and adoption scores for (a) an error-free chatbot, (b) a chatbot seeking clarification regarding a consumer input and (c) a chatbot which fails to discern context. The results suggest that unresolved errors are sufficient to reduce anthropomorphism and adoption intent. However, there is no perceptual difference between an error-free chatbot and one which seeks clarification. The ability to resolve miscommunication (clarification) appears as effective as avoiding it (error-free). Furthermore, the higher a consumer's need for human interaction, the stronger the anthropomorphism - adoption relationship. Thus, anthropomorphic chatbots may satisfy the social desires of consumers high in need for human interaction.},
+	author = {Ben Sheehan and Hyun Seung Jin and Udo Gottlieb},
+	doi = {10.1016/j.jbusres.2020.04.030},
+	issn = {01482963},
+	journal = {Journal of Business Research},
+	keywords = {Anthropomorphism,Artificial conversational entities,Chatbots,Need for human interaction,Perceived humanness,Self-service technology},
+	month = {7},
+	pages = {14-24},
+	publisher = {Elsevier Inc.},
+	title = {Customer service chatbots: Anthropomorphism and adoption},
+	volume = {115},
+	year = {2020},
+}
+@article{Agarwal2021,
+	author = {Akshay Agarwal and Shashank Maiya and Sonu Aggarwal},
+	journal = {CoRR},
+	title = {Evaluating Empathetic Chatbots in Customer Service Settings},
+	volume = {abs/2101.01334},
+	url = {https://arxiv.org/abs/2101.01334},
+	year = {2021},
+}
+@web_page{Lexico2022,
+	author = {Lexico Oxford Library},
+	journal = {Oxford},
+	title = {Meaning of chatbot | Lexico Oxford Library},
+	url = {https://www.lexico.com/definition/chatbot},
+	year = {2022},
+}
+@article{Khanna2015,
+	abstract = {Artificial Intelligence in machines is a very challenging discussion. It involves the creation of machines which can simulate intelligence. This paper discusses some of the current trends and practices in AI and subsequently offers alternative theory for improvement in some of today's prominent and widely accepted postulates. For this, focus on the structuring and functioning of a simple A.I. system -chatbots (or chatter bots) is made. The paper shows how current approach towards A.I. is not adequate and offers a new theory that discusses machine intelligence, throwing light to the future of intelligent systems.},
+	author = {Anirudh Khanna and Bishwajeet Pandey and Kushagra Vashishta and Kartik Kalia and Bhale Pradeepkumar and Teerath Das},
+	doi = {10.14257/ijunesst.2015.8.7.28},
+	issn = {20054246},
+	issue = {7},
+	journal = {International Journal of u- and e-Service, Science and Technology},
+	month = {7},
+	pages = {277-284},
+	publisher = {NADIA},
+	title = {A Study of Today's A.I. through Chatbots and Rediscovery of Machine Intelligence},
+	volume = {8},
+	year = {2015},
+}
+@article{XU2020,
+	title = {AI customer service: Task complexity, problem-solving ability, and usage intention},
+	journal = {Australasian Marketing Journal (AMJ)},
+	volume = {28},
+	number = {4},
+	pages = {189-199},
+	year = {2020},
+	issn = {1441-3582},
+	doi = {https://doi.org/10.1016/j.ausmj.2020.03.005},
+	url = {https://www.sciencedirect.com/science/article/pii/S1441358220300240},
+	author = {Yingzi Xu and Chih-Hui Shieh and Patrick {van Esch} and I-Ling Ling},
+	keywords = {AI customer service, AI definition, Task complexity, Problem-solving ability, Usage intention},
+	abstract = {Artificial intelligence (AI) in the context of customer service, we define as a technology-enabled system for evaluating real-time service scenarios using data collected from digital and/or physical sources in order to provide personalised recommendations, alternatives, and solutions to customers’ enquiries or problems, even very complex ones. We examined, in a banking services context, whether consumers preferred AI or Human online customer service applications using an experimental design across three field-based experiments. The results show that, in the case of low-complexity tasks, consumers considered the problem-solving ability of AI to be greater than that of human customer service and were more likely to use AI while, conversely, for high-complexity tasks, they viewed human customer service as superior and were more likely to use it than AI. Moreover, we found that perceived problem-solving ability mediated the effects of customers’ service usage intentions (i.e., their preference for AI vs. Human) with task complexity serving as a boundary condition. Here we discuss our research and the results and conclude by offering practical suggestions for banks seeking to reach customers and engage with them more effectively by leveraging the distinctive features of AI customer service.
+	Chinese Abstract
+	在客户服务的情境中, 我们将人工智能定义为一种技术支持的系统, 用于评估实时服务场景, 使用从数字和/或物理来源收集的数据, 以便为客户的查询或问题 (甚至是非常复杂的问题) 提供个性化的建议,替代方案和解决方案.我们通过三个基于实地调研的实验, 研究了在银行服务环境中, 消费者是否更喜欢人工智能或人类客户服务应用程序.结果表明, 在低复杂性任务中, 消费者认为人工智能的解决问题能力大于人类客服, 更倾向于使用人工智能;反之, 在高复杂性任务中, 消费者认为人类客服更优越, 相较于人工智能更倾向于使用人类客服.我们发现, 消费者感知到的问题解决能力介导了客户服务使用意图的影响 (即, 他们对人工智能和人类的偏好) , 且任务复杂性作为边界条件.通过这篇文章, 我们讨论了我们的研究和成果, 并为银行寻求接触客户并与他们更有效地利用特色的人工智能客户服务提供了有效的建议.}
+}
