--- a/Thesis/LaTeX/LiteratureStudy.tex
+++ b/Thesis/LaTeX/LiteratureStudy.tex
@@ -9,9 +9,9 @@ A chatbot is a computer software program which combines \acrfull{nlp}, \acrfull{
 \break
 The definition given by the dictionary goes as follows: “A computer program designed to simulate conversation with human users, especially over the Internet”\citep{Lexico2022}. Some more technical definitions are:
 \begin{enumerate}
-	\item A chatbot is an artificial intelligence program and a Human–computer Interaction (HCI) model \citep{Bansal2018}.
-	\item A Chatbot is a software which act as tool that able to interact with human using human’s natural language with aim to assist human daily task \citep{Muizzah2021}.
-	\item Achatbot  is  a  computer  program  which  responds  like  an  intelligent  entity when  conversed  with \citep{Khanna2015}.
+    \item A chatbot is an artificial intelligence program and a Human–computer Interaction (HCI) model \citep{Bansal2018}.
+    \item A Chatbot is a software which act as tool that able to interact with human using human’s natural language with aim to assist human daily task \citep{Muizzah2021}.
+    \item Achatbot  is  a  computer  program  which  responds  like  an  intelligent  entity when  conversed  with \citep{Khanna2015}.
 \end{enumerate}\\
 \break
 Multiple types of chatbots exist, going from text-based to voice-based to a combination of both \citep{Radziwil2021}. Below is a more detailed taxonomy of chatbots.\\
@@ -19,35 +19,35 @@ Multiple types of chatbots exist, going from text-based to voice-based to a comb
 \subsection{Taxonomy of a chatbot}
 There are many variants of chatbots such as digital assistants, artificial conversation entities, interactive agents and smart bots \citep{Adamopoulou2020}. In this research, the focus will be on the interactive agents, since most e-commerce chatbots are interactive agents.\\
 \break
-These chatbots can be further divided into different categories. Depending on which aspect you want to categorise, many options are available. Some of them are listed below.\\
+These variants can be further divided into different categories. Chatbots can be categorise based on multiple factors such as:\\
 
 \subsubsection{Architecture}
-This categorisation is based on the way the chatbots are constructed, their internal architecture. Rule based chatbots use already developed or newly handcrafted algorithms as a decision maker to identify both knowledge and response. This model is fixed and can’t handle new inputs. On the other hand, \acrshort{ai} based chatbots are chatbots that use \acrlong{ml} algorithms to generate a response based on the data provided. They keep on learning and improving based on the previous learning models. This way they are better equipped to handle new inputs \citep{Maroengsit2019}.\\
+This categorisation is based on the way the chatbots are constructed, their internal architecture. Two types emerge: \textbf{rule-based} chatbots and \textbf{ai-based}. Rule-based chatbots use already developed or newly handcrafted algorithms as a decision maker to identify both knowledge and response. This model is fixed and can’t handle new inputs. On the other hand, \acrshort{ai}-based chatbots are chatbots that use \acrlong{ml} algorithms to generate a response based on the data provided. They keep on learning and improving based on the previous learning models. This way they are better equipped to handle new inputs \citep{Maroengsit2019}.\\
 
 \subsubsection{Domain}
-The domain category is based on how broad the domain is in which they are used. Domain specific chatbots focus on specific industries. They have knowledge of the industry they are deployed in. On the other hand, general domain chatbots are created to support conversations in open topics. They don’t support a specific domain. Instead, they are versatile and may be applied to any discipline \citep{Maroengsit2019}.\\
+The domain category is based on how broad the domain is in which they are used. \textbf{Domain specific} chatbots focus on \textbf{specific industries}. They have knowledge of the industry they are deployed in. On the other hand, \textbf{general domain} chatbots are created to support conversations in \textbf{open topics}. They don’t support a specific domain. Instead, they are versatile and may be applied to any discipline \citep{Maroengsit2019}.\\
 
 \subsubsection{Platform}
-Chatbots can be divided up based on the platform on which they are active. Social media chatbots use platforms such as Facebook Messenger, Facebook WhatsApp or Telegram Messenger for their communication with the user. Web based chatbots are most common on websites of companies. There, they get their own chat box to serve clients that way. Standalone program chatbots are installed as a separate program on the device of the user \citep{Maroengsit2019}.\\
+Chatbots can be divided up based on the platform on which they are active. \textbf{Social media} chatbots use platforms such as Facebook Messenger, Facebook WhatsApp or Telegram Messenger for their communication with the user. \textbf{Web based} chatbots are most common on websites of companies. There, they get their own chat box to serve clients that way. \textbf{Standalone program} chatbots are installed as a separate program on the device of the user \citep*{Maroengsit2019, Xu2017, CICBA2018}.\\
 
-\subsubsection{Type}
-Goal-based chatbots have a set goal they want to get to. For example, a set goal could be to sell a specific product to the customer. Once the product is sold, the chatbot has successfully reached its goal and thus fulfilled its purpose. Knowledge-based chatbots are classified on the knowledge they possess. Service-based chatbots are divided on the services they provide to the customer. Response-generated based chatbots are classified based on what action it performs in response generation \citep{Nuruzzaman2018}.\\
+\subsubsection{Type of service provided}
+\textbf{Goal-based} chatbots have a \textbf{set goal} they want to reach. For example, a set goal could be to sell a specific product to the customer. Once the product is sold, the chatbot has successfully reached its goal and thus fulfilled its purpose. \textbf{Knowledge-based} chatbots are classified on \textbf{the knowledge they possess}. \textbf{Service-based} chatbots are divided on \textbf{the services they provide} to the customer. Response-generated based chatbots are classified based on what action it performs in response generation \citep{Nuruzzaman2018}. It is possible that e.g., a goal-based chatbot can be a service-based or knowledge-based chatbot and vice versa.\\
 
 \subsubsection{Task}
-This categorisation results in task- and non-task-oriented chatbots. The latter is more question oriented and the first one more conversational \citep{Nuruzzaman2018}.\\
+This categorisation results in \textbf{task-oriented} and \textbf{non-task-oriented} chatbots. The latter is more \textbf{question oriented} and the first one is \textbf{more conversational} \citep{Nuruzzaman2018}. Task-oriented chatbots aim to assist the customer to complete a certain task and have a short conversation. Examples are Siri, Google Now and Alexa. Non-task-orientd chatbots focus on conversing with the customers to answer questions and for entertainment purposes. \citep{Nuruzzaman2018}\\
 
-\subsubsection{Some example e-commerce chatbots}
+\subsection{Some examples of e-commerce chatbots}
 \begin{enumerate}
 	\item Billie by Bol.com
 	\item Stylebot by Nike
-	\item WineBot by Lidl
+	\item The Proximus in-app chatbot
 	\item Domino's AnyWare by Domino's Pizza
 	\item Zalando chatbot
 \end{enumerate}
 
 \section{User experiences with e-commerce chatbots}
 \subsection{How to interpret user experiences?}
-In the past, customers could only make complaints and queries through mail or through a form. From 2016, this changed with the rise of AI and the transition from online social networks to mobile messaging applications such as Messenger, WhatsApp, etc. Service providers tried to respond to this change by introducing chatbots for customer service \citep{Brandtzaeg2018}.\\
+In the past, customers could only make complaints and queries through mail or through a form. From 2016, this changed with the rise of \acrshort{ai} and the transition from online social networks to mobile messaging applications such as Messenger, WhatsApp, etc. Service providers tried to respond to this change by introducing chatbots for customer service \citep{Brandtzaeg2018}.\\
 \break
 Customer service chatbots offer the possibility to provide support to customers in real-time and around the clock. First of all, the chatbot will interpret the problem/question of the customer. Next, it will search in its model in which way it can best help the customer. Subsequently, the chatbot will execute the chosen approach until the customer's goal is reached.\\
 \break
@@ -114,7 +114,7 @@ The efficiency dimension specifies the ease of use, quick replies versus free te
 Graphical Appearance is all about the design and feel of the user interface and the use of emojis and GIFs in conversations \citep*{Muizzah2021, Verkeyn2018}.\\
 
 \subsubsection{Humanity}
-The humanity dimension shows how human-like the chatbot is. The attributes are about how real the chatbot feels, if it creates and enjoyable interaction, if it can convey a personality and if it can read and respond to certain moods of the customer \citep*{Muizzah2021, Verkeyn2018}.\\
+The humanity dimension shows how human-like the chatbot is. The attributes are about how real the chatbot feels, if it creates and an enjoyable interaction, if it can convey a personality and if it can read and respond to certain moods of the customer \citep*{Muizzah2021, Verkeyn2018}.\\
 
 \subsubsection{Empathy}
 Empathy is about personalised options and suggestions \citep*{Muizzah2021, Verkeyn2018}.\\
