reorder + apply feedback

--- a/Thesis/LaTeX/LiteratureStudy.tex
+++ b/Thesis/LaTeX/LiteratureStudy.tex
@@ -9,15 +9,15 @@ A chatbot is a computer software program which combines \acrfull{nlp}, \acrfull{
 \break
 The definition given by the dictionary goes as follows: “A computer program designed to simulate conversation with human users, especially over the Internet”\citep{Lexico2022}. Some more technical definitions are:
 \begin{enumerate}
-    \item A chatbot is an artificial intelligence program and a Human–computer Interaction (HCI) model \citep{Bansal2018}.
-    \item A Chatbot is a software which act as tool that able to interact with human using human’s natural language with aim to assist human daily task \citep{Muizzah2021}.
-    \item Achatbot  is  a  computer  program  which  responds  like  an  intelligent  entity when  conversed  with \citep{Khanna2015}.
+    \item A chatbot is an artificial intelligence program and a \acrfull{hci} model \citep{Bansal2018}.
+    \item A chatbot is a software which act as tool that able to interact with human using human’s natural language with aim to assist human daily task \citep{Muizzah2021}.
+    \item A chatbot  is  a  computer  program  which  responds  like  an  intelligent  entity when  conversed  with \citep{Khanna2015}.
 \end{enumerate}\\
 \break
 Multiple types of chatbots exist, going from text-based to voice-based to a combination of both \citep{Radziwil2021}. Below is a more detailed taxonomy of chatbots.\\
 
 \subsection{Taxonomy of a chatbot}
-There are many variants of chatbots such as digital assistants, artificial conversation entities, interactive agents and smart bots \citep{Adamopoulou2020}. In this research, the focus will be on the interactive agents, since most e-commerce chatbots are interactive agents.\\
+There are many variants of chatbots such as digital assistants, artificial conversation entities, interactive agents and smart bots \citep{Adamopoulou2020}. In this research, the focus will be on the interactive agents. Since these are made to support customer service, this research will mostly be focusing on interactive agents.\\
 \break
 These variants can be further divided into different categories. Chatbots can be categorise based on multiple factors such as:\\
 
@@ -45,7 +45,91 @@ This categorisation results in \textbf{task-oriented} and \textbf{non-task-orien
 	\item Zalando chatbot
 \end{enumerate}
 
-\section{User experiences with e-commerce chatbots}
+\section{Customer service chatbots in the telecom industry: a deeper insight}
+The telecom sector is an industry where customer satisfaction is an important factor. The different companies within this sector provide the same kind of services and products which makes switching operators easy. According to the research by \citep{Quintino2019}, the use of chatbots has a significant effect on customer satisfaction by ensuring better customer service. The findings from the research of \citeauthor{Quintino1019} were applied to Portuguese telecom companies, with this paper the line is further drawn into the Belgian telecom sector.\\
+\subsection{The Belgian telecom industry: market overview}
+The Belgian telecom sector is known as one of the most expensive in Europe, in the Eurostat survey conducted in 2019 it is even known as the most expensive in Europe \citep{Eurostat2020}. The services offered by the telecom operators can be divided into 2 categories: fixed internet and mobile.\\
+\break
+According to the 2020 annual report published by the \acrfull{bipt}, Proximus is the market leader in both fixed internet (45.3\%) and mobile (39\%). Telenet is in second place in both categories; for fixed Internet they have a market share of 35.6\%, for mobile this is 26\%. There is also a 3rd player that has been growing in recent years, Orange has a market share of 7.2\% in the fixed internet and +/- 26\% in the mobile market. \citep*{BIPT2021,VanLeemputten2021}.\\
+
+\subsection{Challenges in the telecom industry}
+Telecom operators in general face several challenges that can cause such companies to go bust. According to research by \citeauthor{Quintino2019} \citep*{Quintino2019, Malviya2012}, the most important challenges in this sector are: determining the revenue stream, rapidly changing consumer demands. The various challenges have an overall effect on customer retention. The findings from Quintino's research are also confirmed in Joshi's research \citep{Joshi2014}, in this paper, the parameters that affect the customer experience of cellular mobile services within the telecom industry of India are investigated \citep*{Joshi2014, Quintino2019, Malviya2012}.\\
+\break
+As in Quintino's study, this study will look at how the customer experience can be further optimised. It will be investigated how the chatbot can respond to the different challenges within the telecom sector. The results from this study can be used by telecom providers to further adjust their services to the needs of their (potential) customers.
+
+\section{Key Attributes and components of a successful customer service chatbot}
+Previous research \citep*{Muizzah2021, Verkeyn2018} has pointed out which characteristics are the most important. These characteristics can be grouped into some key dimensions provided by this previous research.\\
+
+\subsubsection{Functionality}
+The most important attributes are the interpretation of requests, execution of the request, flexible interpretation, ability to maintain a discussion, activation and the number of services available \citep*{Muizzah2021, Verkeyn2018}.\\
+
+\subsubsection{Trustworthiness}
+Trustworthiness handles about the chatbot containing dependable information, containing a wide range of knowledge, the possibility of rating the chatbot, robustness to unexpected input and transparency \citep*{Muizzah2021, Verkeyn2018}.
+
+\subsubsection{Safety / Intrusion}
+This category is all about protection and the respect of privacy and making sure the user is safe from intrusion \citep*{Muizzah2021, Verkeyn2018}.\\
+
+\subsubsection{Efficiency}
+The efficiency dimension specifies the ease of use, quick replies versus free text usage, availability, accessibility and the need for an account \citep*{Muizzah2021, Verkeyn2018}.\\
+
+\subsubsection{Graphical Appearance}
+Graphical Appearance is all about the design and feel of the user interface and the use of emojis and GIFs in conversations \citep*{Muizzah2021, Verkeyn2018}.\\
+
+\subsubsection{Humanity}
+The humanity dimension shows how human-like the chatbot is. The attributes are about how real the chatbot feels, if it creates and an enjoyable interaction, if it can convey a personality and if it can read and respond to certain moods of the customer \citep*{Muizzah2021, Verkeyn2018}.\\
+
+\subsubsection{Empathy}
+Empathy is about personalised options and suggestions \citep*{Muizzah2021, Verkeyn2018}.\\
+
+\subsubsection{Responsiveness}
+Responsiveness specifies the productivity and how fast the chatbot responds \citep*{Muizzah2021, Verkeyn2018}.\\
+\break
+By putting these 8 dimensions through \acrfull{ahp}, 7 main \acrshort{ahp} categories are found. \acrshort{ahp} is a structured approach for navigating complex decision-making processes that involve both qualitative and quantitative considerations \citep{Radziwil2021}. Table 1 lists the plausible attributes that give the highest user satisfaction score \citep{Muizzah2021}.\\
+
+\begin{longtable}{|l|l|}
+	\hline
+	\textbf{Categories} &
+	\textbf{Attributes} \\ \hline
+	\endfirsthead
+	\endhead
+	\begin{tabular}[c]{@{}l@{}}Technical\\ Functionalities\end{tabular} &
+	\begin{tabular}[c]{@{}l@{}}- Sentiment analytics: Intelligent (Using \acrshort{ai}, \acrshort{nlp}, \acrshort{ml}, \\ Semantic technology\\ - User friendly\\ - Automated\\ - Simple interface\\ - Interactive (using video, audio) to cater needs from different groups\\ - Multi-lingual\\ - General ease of use\end{tabular} \\ \hline
+	Efficiency &
+	\begin{tabular}[c]{@{}l@{}}- Robust to manipulation of data input by user\\ - Provide proper escalation channels\\ - Quick to answer\\ - Can perform damage control easily\end{tabular} \\ \hline
+	Effectiveness &
+	\begin{tabular}[c]{@{}l@{}}- Interpret statements and instructions accurately\\ - Linguistic accuracy\\ - Execute desired tasks correctly\\ - Contains wide array of knowledge\\ - Able to perform simple problem solving\end{tabular} \\ \hline
+	Humanistic &
+	\begin{tabular}[c]{@{}l@{}}- Human-like personality\\ - Transparent and disclose the chatbot identity\\ - Able to respond correctly to user's questions\\ - Can maintain the pattern of conversation within theme\end{tabular} \\ \hline
+	Ethics &
+	\begin{tabular}[c]{@{}l@{}}- Trained with knowledge of culture and ethics of users\\ - Protect and respect user's privacy\\ - Sensitive to user's concern (i.e., security, social concerns)\\ - Constancy\end{tabular} \\ \hline
+	Technical Satisfaction &
+	\begin{tabular}[c]{@{}l@{}}- Able to convey greetings\\ - Entertaining, fun and users enjoy the conversation\\ - Able to respond to the user's mood\\ - Provide emotional information using tones and expressions\end{tabular} \\ \hline
+	Accessibility &
+	\begin{tabular}[c]{@{}l@{}}- Ability to detect the user's intent\\ - Meeting a vast range of needs (i.e., time of buffer,\\ text interface)\\ - Available 24/7\end{tabular} \\ \hline
+	\caption{Plausible quality attributes of Chatbot \citep{Muizzah2021}.}
+	\label{tab:ChatbotAttributes}
+\end{longtable}
+
+These attributes can be brought under six quality assessment categories provided by the ISO 9126-1 quality model\footnote{https://www.iso.org/standard/22749.html} as seen in \ref{tab:ChatbotAttributes}.  By doing so, the quality of any piece of software, including a chatbot, can be measured \citep{Muizzah2021}.\\
+\break
+Depending on the goal you want to reach, the focus on the most important characteristics will shift \citep{Radziwil2021}. Overall, accessibility and efficiency come out to be the most important dimensions of a chatbot \citep{Radziwil2021}. Both \citep{Muizzah2021} and \citep{Radziwil2021} confirm these results.\\
+
+\begin{longtable}{|c|c|}
+	\hline
+	\multicolumn{1}{|l|}{\textbf{Characteristics}} & \multicolumn{1}{l|}{\textbf{Sub Characteristics}}                                                            \\ \hline
+	\endfirsthead
+	\endhead
+	Functionality   & \begin{tabular}[c]{@{}c@{}}Suitability\\ Accuracy\\ Interoperability\\ Security\\ Functional compliance\end{tabular}           \\ \hline
+	Reliability                                    & \begin{tabular}[c]{@{}c@{}}Maturity\\ Fault tolerance\\ Recoverability\\ Reliability compliance\end{tabular} \\ \hline
+	Usability       & \begin{tabular}[c]{@{}c@{}}Understandability\\ Learnability\\ Operability\\ Attractiveness\\ Usability compliance\end{tabular} \\ \hline
+	Efficiency                                     & \begin{tabular}[c]{@{}c@{}}Time behaviour\\ Resource utilisation\\ Efficiency compliance\end{tabular}        \\ \hline
+	Maintainability & \begin{tabular}[c]{@{}c@{}}Analysability\\ Changeability\\ Stability\\ Testability\\ Maintainability compliance\end{tabular}   \\ \hline
+	Portability     & \begin{tabular}[c]{@{}c@{}}Adaptability\\ Installability\\ Co-existence\\ Replaceability\\ Portability compliance\end{tabular} \\ \hline
+	\caption{the ISO/IEC 9126-1 internal/external quality model \citep{ISO9126}.}
+	\label{tab:ISO9126}
+\end{longtable}
+
+\section{User experiences with customer service chatbots}
 \subsection{How to interpret user experiences?}
 In the past, customers could only make complaints and queries through mail or through a form. From 2016, this changed with the rise of \acrshort{ai} and the transition from online social networks to mobile messaging applications such as Messenger, WhatsApp, etc. Service providers tried to respond to this change by introducing chatbots for customer service \citep{Brandtzaeg2018}.\\
 \break
@@ -94,79 +178,6 @@ The consumer expects the chatbot to meet certain security levels, especially whe
 \break
 Since the existence of \acrfull{gdpr}, users' views on giving up personal data to machines have changed, this transition is also noticeable in chatbots. Users of chatbots want to know what happens to their data and how it is stored, they expect as little personal data as possible to be stored \citep*{Folstad2018, Nordheim2019}. 
 
-
-\section{Key Attributes and components of a successful e-commerce chatbot}
-Previous research has pointed out which characteristics are the most important. These characteristics can be grouped into some key dimensions.\\
-
-\subsubsection{Functionality}
-The most important attributes are interpretation of requests, execution of the request, flexible interpretation, ability to maintain a discussion, activation and the number of services available \citep*{Muizzah2021, Verkeyn2018}.\\
-
-\subsubsection{Trustworthiness}
-Trustworthiness handles about the chatbot containing dependable information, containing a wide range of knowledge, the possibility of rating the chatbot, robustness to unexpected input and transparency \citep*{Muizzah2021, Verkeyn2018}.
-
-\subsubsection{Safety / Intrusion}
-This category is all about protection and the respect of privacy and making sure the user is safe from intrusion \citep*{Muizzah2021, Verkeyn2018}.\\
-
-\subsubsection{Efficiency}
-The efficiency dimension specifies the ease of use, quick replies versus free text usage, availability, accessibility and the need for an account \citep*{Muizzah2021, Verkeyn2018}.\\
-
-\subsubsection{Graphical Appearance}
-Graphical Appearance is all about the design and feel of the user interface and the use of emojis and GIFs in conversations \citep*{Muizzah2021, Verkeyn2018}.\\
-
-\subsubsection{Humanity}
-The humanity dimension shows how human-like the chatbot is. The attributes are about how real the chatbot feels, if it creates and an enjoyable interaction, if it can convey a personality and if it can read and respond to certain moods of the customer \citep*{Muizzah2021, Verkeyn2018}.\\
-
-\subsubsection{Empathy}
-Empathy is about personalised options and suggestions \citep*{Muizzah2021, Verkeyn2018}.\\
-
-\subsubsection{Responsiveness}
-Responsiveness specifies the productivity and how fast the chatbot responds \citep*{Muizzah2021, Verkeyn2018}.\\
-\break
-By putting these attributes through \acrfull{ahp}, 7 main dimensions are found. \acrshort{ahp} is a structured approach for navigating complex decision-making processes that involve both qualitative and quantitative considerations \citep{Radziwil2021}. Table 1 lists the plausible attributes that give the highest user satisfaction score \citep{Muizzah2021}.\\
-
-\begin{longtable}{|l|l|}
-	\hline
-	\textbf{Dimension} &
-	\textbf{Attributes} \\ \hline
-	\endfirsthead
-	\endhead
-	\begin{tabular}[c]{@{}l@{}}Technical\\ Functionalities\end{tabular} &
-	\begin{tabular}[c]{@{}l@{}}- Sentiment analytics: Intelligent (Using \acrshort{ai}, \acrshort{nlp}, \acrshort{ml}, \\ Semantic technology\\ - User friendly\\ - Automated\\ - Simple interface\\ - Interactive (using video, audio) to cater needs from different groups\\ - Multi-lingual\\ - General ease of use\end{tabular} \\ \hline
-	Efficiency &
-	\begin{tabular}[c]{@{}l@{}}- Robust to manipulation of data input by user\\ - Provide proper escalation channels\\ - Quick to answer\\ - Can perform damage control easily\end{tabular} \\ \hline
-	Effectiveness &
-	\begin{tabular}[c]{@{}l@{}}- Interpret statements and instructions accurately\\ - Linguistic accuracy\\ - Execute desired tasks correctly\\ - Contains wide array of knowledge\\ - Able to perform simple problem solving\end{tabular} \\ \hline
-	Humanistic &
-	\begin{tabular}[c]{@{}l@{}}- Human-like personality\\ - Transparent and disclose the chatbot identity\\ - Able to respond correctly to user's questions\\ - Can maintain the pattern of conversation within theme\end{tabular} \\ \hline
-	Ethics &
-	\begin{tabular}[c]{@{}l@{}}- Trained with knowledge of culture and ethics of users\\ - Protect and respect user's privacy\\ - Sensitive to user's concern (i.e., security, social concerns)\\ - Constancy\end{tabular} \\ \hline
-	Technical Satisfaction &
-	\begin{tabular}[c]{@{}l@{}}- Able to convey greetings\\ - Entertaining, fun and users enjoy the conversation\\ - Able to respond to the user's mood\\ - Provide emotional information using tones and expressions\end{tabular} \\ \hline
-	Accessibility &
-	\begin{tabular}[c]{@{}l@{}}- Ability to detect the user's intent\\ - Meeting a vast range of needs (i.e., time of buffer,\\ text interface)\\ - Available 24/7\end{tabular} \\ \hline
-	\caption{Plausible quality attributes of Chatbot \citep{Muizzah2021}.}
-	\label{tab:ChatbotAttributes}
-\end{longtable}
-
-These attributes can be brought under six quality assessment categories provided by the ISO 9126-1 quality model\footnote{https://www.iso.org/standard/22749.html} as seen in \ref{tab:ChatbotAttributes}.  By doing so, the quality of any piece of software, including a chatbot, can be measured \citep{Muizzah2021}.\\
-\break
-Depending on the goal you want to reach, the focus on the most important characteristics will shift \citep{Radziwil2021}. Overall, accessibility and efficiency come out to be the most important dimensions of a chatbot \citep{Radziwil2021}. Both \citep{Muizzah2021} and \citep{Radziwil2021} confirm these results.\\
-
-\begin{longtable}{|c|c|}
-	\hline
-	\multicolumn{1}{|l|}{\textbf{Characteristics}} & \multicolumn{1}{l|}{\textbf{Sub Characteristics}}                                                            \\ \hline
-	\endfirsthead
-	\endhead
-	Functionality   & \begin{tabular}[c]{@{}c@{}}Suitability\\ Accuracy\\ Interoperability\\ Security\\ Functional compliance\end{tabular}           \\ \hline
-	Reliability                                    & \begin{tabular}[c]{@{}c@{}}Maturity\\ Fault tolerance\\ Recoverability\\ Reliability compliance\end{tabular} \\ \hline
-	Usability       & \begin{tabular}[c]{@{}c@{}}Understandability\\ Learnability\\ Operability\\ Attractiveness\\ Usability compliance\end{tabular} \\ \hline
-	Efficiency                                     & \begin{tabular}[c]{@{}c@{}}Time behaviour\\ Resource utilisation\\ Efficiency compliance\end{tabular}        \\ \hline
-	Maintainability & \begin{tabular}[c]{@{}c@{}}Analysability\\ Changeability\\ Stability\\ Testability\\ Maintainability compliance\end{tabular}   \\ \hline
-	Portability     & \begin{tabular}[c]{@{}c@{}}Adaptability\\ Installability\\ Co-existence\\ Replaceability\\ Portability compliance\end{tabular} \\ \hline
-	\caption{the ISO/IEC 9126-1 internal/external quality model \citep{ISO9126}.}
-	\label{tab:ISO9126}
-\end{longtable}
-
 \section{Issues and errors in the current generation of customer service chatbots}
 Even though the usage of chatbots can bring forth significant advantages, they are not free of drawbacks and threats. Below are highlighted some critical issues every company should take into account.
 
@@ -189,15 +200,3 @@ It is difficult to tailor a chatbot to the exact need of the customers. This is 
 
 \subsection{Not understanding the capabilities of the chatbot}
 When customers don't fully understand the capabilities of a chatbot, he can't optimally use the service provided. This may result in frustrations or unnecessary limitations due to the absence of knowledge. It is in a company's best intrest to clearly specify what capabilities their chatbot has \citep{brandtzaeg2020}.
-
-\section{Customer service chatbots in the telecom industry: a deeper insight}
-The telecom sector is an industry where customer satisfaction is an important factor. The different companies within this sector provide the same kind of services and products which makes switching operators easy. According to the research by \citep{Quintino2019}, the use of chatbots has a significant effect on customer satisfaction by ensuring better customer service. The findings from the research of \citeauthor{Quintino1019} were applied to Portuguese telecom companies, with this paper the line is further drawn into the Belgian telecom sector.\\
-\subsection{The Belgian telecom industry: market overview}
-The Belgian telecom sector is known as one of the most expensive in Europe, in the Eurostat survey conducted in 2019 it is even known as the most expensive in Europe \citep{Eurostat2020}. The services offered by the telecom operators can be divided into 2 categories: fixed internet and mobile.\\
-\break
-According to the 2020 annual report published by the \acrfull{bipt}, Proximus is the market leader in both fixed internet (45.3\%) and mobile (39\%). Telenet is in second place in both categories; for fixed Internet they have a market share of 35.6\%, for mobile this is 26\%. There is also a 3rd player that has been growing in recent years, Orange has a market share of 7.2\% in the fixed internet and +/- 26\% in the mobile market. \citep*{BIPT2021,VanLeemputten2021}.\\
-
-\subsection{Challenges in the telecom industry}
-Telecom operators in general face several challenges that can cause such companies to go bust. According to research by \citeauthor{Quintino2019} \citep*{Quintino2019, Malviya2012}, the most important challenges in this sector are: determining the revenue stream, rapidly changing consumer demands. The various challenges have an overall effect on customer retention. The findings from Quintino's research are also confirmed in Joshi's research \citep{Joshi2014}, in this paper, the parameters that affect the customer experience of cellular mobile services within the telecom industry of India are investigated \citep*{Joshi2014, Quintino2019, Malviya2012}.\\
-\break
-As in Quintino's study, this study will look at how the customer experience can be further optimised. It will be investigated how the chatbot can respond to the different challenges within the telecom sector. The results from this study can be used by telecom providers to further adjust their services to the needs of their (potential) customers.
